--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas>=2.0
-numpy>=1.24
-scikit-learn>=1.4
-matplotlib>=3.8
-folium>=0.15
-joblib>=1.3
+pandas
+numpy
+scikit-learn
+matplotlib
+folium
+joblib
